update to avoid text wrapping

--- a/cubey/src/scss/components/_text.sass
+++ b/cubey/src/scss/components/_text.sass
@@ -14,8 +14,9 @@
 
   &--title
     bottom: 75%
-    font-size: 2.6em
-    height: 1.2em
+    font-size: 2em
+    height: 1em
+    white-space: nowrap;
 
     span
       display: block
